--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -22,5 +22,5 @@ jobs:
     - name: Lint with flake8
       run: |
         pip install flake8
-        flake8 . --ignore=E501,E402
+        RUN flake8 --ignore=E501,F401 ./hello_django
 
